[tool.poetry]
name = "fcasa"
version = "0.1.0"
description = "F Class Adventurer Skills Analyzer"
authors = ["LianSheng197"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.1"
opencv-python = "^4.8.0.74"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
